﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-06-30 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: escape also single quotes   
    ### 2.8.2 released from QA_2_8 

2006-06-28 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: remove debug code
    * libraries/common.lib.php: escape allowed parameters from non-token 
      requests

2006-06-27 Michal Čihař  <michal@cihar.com>
    * libraries/import/csv.php: Fix special case of Excel export with ; at the
      end (bug #1511046).
    * scripts/setup.php, libraries/compat/var_export.php: Add var_export
      compatibility wrapper from PEAR PHP_Compat to make setup.php work on PHP
      4.1 (bug #1513007).
    * libraries/Config.class.php: Recalculate URL only if needed not all times
      when using https.
    * lang/slovak: Updated, thanks to Tomas Tatransky - droopytsf.
    * lang/czech: Translated missing strings.

2006-06-25 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/pdf.php, libraries/plugin_interface.lib.php, lang/*:
      bug #1504218: display an explanation for what is a PDF export
    * libraries/database_interface.lib.php: when a db directory has
      wrong permissions/ownership, information_shema does not work
      for all databases so we revert to SHOW TABLE STATUS

2006-06-23 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: bug #1501027, possible user/password
      disclosure when switching from http to https

2006-06-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php, /export/sql.php, lang/*:
    export of procedures and functions. Note: this needs improvement
    because currently the DELIMITER for procedures is exported as a
    comment. Users could remove the comment marker and feed this 
    to command-line mysql but it would be better to generate DELIMITER
    not as a comment and parse it while importing.
